gcc/testsuite/g++.dg/parse/constructor1.C
ACE_Process_Descriptor::ACE_Process_Descriptor () : // { dg-error "" }
  process_ (0)
{
}
